Fix CI workflows to handle artifact-s3 dependency path
- Use npm pkg set to override dependency path in CI
- Remove cache: npm since we're modifying package.json
- Checkout artifact-s3 to ./artifact-s3 and update path accordingly

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,6 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '24'
-          cache: 'npm'
 
       - name: Install library dependencies
         run: npm ci
@@ -35,13 +34,16 @@ jobs:
         working-directory: artifact-s3
 
       - name: Install action dependencies
-        run: npm ci
+        run: |
+          npm pkg set dependencies.@action-artifact-s3/artifact-s3=file:./artifact-s3
+          npm install
 
       - name: Build action
         run: npm run build
 
       - name: Check for uncommitted dist changes
         run: |
+          git checkout package.json package-lock.json
           if [[ -n "$(git status --porcelain dist/)" ]]; then
             echo "::error::Uncommitted changes in dist/. Run 'npm run build' and commit the changes."
             git status --porcelain dist/
@@ -65,7 +67,6 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '24'
-          cache: 'npm'
 
       - name: Install library dependencies
         run: npm ci
@@ -76,7 +77,9 @@ jobs:
         working-directory: artifact-s3
 
       - name: Install action dependencies
-        run: npm ci
+        run: |
+          npm pkg set dependencies.@action-artifact-s3/artifact-s3=file:./artifact-s3
+          npm install
 
       - name: Type check
         run: npx tsc --noEmit
