--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -25,7 +25,6 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '24'
-          cache: 'npm'
 
       - name: Install library dependencies
         run: npm ci
@@ -36,7 +35,9 @@ jobs:
         working-directory: artifact-s3
 
       - name: Install action dependencies
-        run: npm ci
+        run: |
+          npm pkg set dependencies.@action-artifact-s3/artifact-s3=file:./artifact-s3
+          npm install
 
       - name: Build action
         run: npm run build
@@ -193,7 +194,6 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '24'
-          cache: 'npm'
 
       - name: Install library dependencies
         run: npm ci
@@ -204,7 +204,9 @@ jobs:
         working-directory: artifact-s3
 
       - name: Install action dependencies
-        run: npm ci
+        run: |
+          npm pkg set dependencies.@action-artifact-s3/artifact-s3=file:./artifact-s3
+          npm install
 
       - name: Build action
         run: npm run build
