--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,6 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '24'
-          cache: 'npm'
 
       - name: Install library dependencies
         run: npm ci
@@ -37,7 +36,9 @@ jobs:
         working-directory: artifact-s3
 
       - name: Install action dependencies
-        run: npm ci
+        run: |
+          npm pkg set dependencies.@action-artifact-s3/artifact-s3=file:./artifact-s3
+          npm install
 
       - name: Build action
         run: npm run build
