--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: [main]
 
+permissions:
+  contents: write
+
 jobs:
   build:
     name: Build
@@ -14,25 +17,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Checkout artifact-s3 library
-        uses: actions/checkout@v4
-        with:
-          repository: ${{ github.repository_owner }}/artifact-s3
-          path: artifact-s3
-
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '24'
-          cache: 'npm'
-
-      - name: Install library dependencies
-        run: npm ci
-        working-directory: artifact-s3
-
-      - name: Build library
-        run: npm run build
-        working-directory: artifact-s3
+          node-version: "24"
 
       - name: Install action dependencies
         run: npm ci
@@ -40,10 +28,22 @@ jobs:
       - name: Build action
         run: npm run build
 
-      - name: Check for uncommitted dist changes
+      - name: Commit dist changes
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: |
           if [[ -n "$(git status --porcelain dist/)" ]]; then
-            echo "::error::Uncommitted changes in dist/. Run 'npm run build' and commit the changes."
+            git config user.name "github-actions[bot]"
+            git config user.email "github-actions[bot]@users.noreply.github.com"
+            git add dist/
+            git commit -m "chore: rebuild dist [skip ci]"
+            git push
+          fi
+
+      - name: Check for uncommitted dist changes (PR only)
+        if: github.event_name == 'pull_request'
+        run: |
+          if [[ -n "$(git status --porcelain dist/)" ]]; then
+            echo "::error::Uncommitted changes in dist/. The dist will be rebuilt when merged to main."
             git status --porcelain dist/
             exit 1
           fi
@@ -55,25 +55,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Checkout artifact-s3 library
-        uses: actions/checkout@v4
-        with:
-          repository: ${{ github.repository_owner }}/artifact-s3
-          path: artifact-s3
-
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '24'
-          cache: 'npm'
-
-      - name: Install library dependencies
-        run: npm ci
-        working-directory: artifact-s3
-
-      - name: Build library
-        run: npm run build
-        working-directory: artifact-s3
+          node-version: "24"
 
       - name: Install action dependencies
         run: npm ci
