--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@action-artifact-s3/artifact-s3": "file:../artifact-s3",
+    "@kusold/artifact-s3": "github:kusold/artifact-s3#8bbe0a4336c289b76d0427d70d803d43bed27d04",
     "@actions/core": "^1.11.1",
     "@actions/glob": "^0.5.0"
   },
