--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,13 +41,14 @@ jobs:
       - name: Build action
         run: npm run build
 
-      - name: Verify dist exists
+      - name: Check for uncommitted dist changes
         run: |
-          if [[ ! -f dist/index.js ]]; then
-            echo "::error::dist/index.js not found after build"
+          git checkout package.json package-lock.json
+          if [[ -n "$(git status --porcelain dist/)" ]]; then
+            echo "::error::Uncommitted changes in dist/. Run 'npm run build' and commit the changes."
+            git status --porcelain dist/
             exit 1
           fi
-          echo "Build successful - dist/index.js exists"
 
   lint:
     name: Lint
