--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -15,29 +15,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Checkout artifact-s3 library
-        uses: actions/checkout@v4
-        with:
-          repository: ${{ github.repository_owner }}/artifact-s3
-          path: artifact-s3
-
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '24'
-
-      - name: Install library dependencies
-        run: npm ci
-        working-directory: artifact-s3
-
-      - name: Build library
-        run: npm run build
-        working-directory: artifact-s3
+          node-version: "24"
 
       - name: Install action dependencies
-        run: |
-          npm pkg set dependencies.@action-artifact-s3/artifact-s3=file:./artifact-s3
-          npm install
+        run: npm ci
 
       - name: Build action
         run: npm run build
@@ -45,34 +29,34 @@ jobs:
       - name: Start Garage server
         run: |
           mkdir -p /tmp/garage/meta /tmp/garage/data
-          
+
           cat > /tmp/garage/garage.toml <<EOF
           metadata_dir = "/var/lib/garage/meta"
           data_dir = "/var/lib/garage/data"
           db_engine = "sqlite"
-          
+
           replication_factor = 1
-          
+
           rpc_bind_addr = "[::]:3901"
           rpc_public_addr = "127.0.0.1:3901"
           rpc_secret = "$(openssl rand -hex 32)"
-          
+
           [s3_api]
           s3_region = "garage"
           api_bind_addr = "[::]:3900"
           root_domain = ".s3.garage.localhost"
-          
+
           [s3_web]
           bind_addr = "[::]:3902"
           root_domain = ".web.garage.localhost"
           index = "index.html"
-          
+
           [admin]
           api_bind_addr = "[::]:3903"
           admin_token = "admin123"
           metrics_token = "metrics123"
           EOF
-          
+
           docker run -d \
             --name garage \
             -p 3900:3900 -p 3901:3901 -p 3902:3902 -p 3903:3903 \
@@ -80,34 +64,34 @@ jobs:
             -v /tmp/garage/meta:/var/lib/garage/meta \
             -v /tmp/garage/data:/var/lib/garage/data \
             dxflrs/garage:v2.1.0
-          
+
           sleep 5
-          
+
           NODE_ID=$(docker exec garage /garage status 2>/dev/null | grep -oP '^[a-f0-9]+' | head -1)
           echo "Node ID: $NODE_ID"
-          
+
           docker exec garage /garage layout assign -z dc1 -c 1G "$NODE_ID"
           docker exec garage /garage layout apply --version 1
-          
+
           docker exec garage /garage bucket create test-artifacts
           docker exec garage /garage key create test-key
-          
+
           KEY_INFO=$(docker exec garage /garage key info test-key)
           echo "$KEY_INFO"
-          
+
           ACCESS_KEY=$(echo "$KEY_INFO" | grep "Key ID:" | awk '{print $3}')
           SECRET_KEY=$(echo "$KEY_INFO" | grep "Secret key:" | awk '{print $3}')
-          
+
           echo "ACCESS_KEY=$ACCESS_KEY" >> $GITHUB_ENV
           echo "SECRET_KEY=$SECRET_KEY" >> $GITHUB_ENV
-          
+
           docker exec garage /garage bucket allow \
             --read \
             --write \
             --owner \
             test-artifacts \
             --key test-key
-          
+
           echo "Garage setup complete!"
 
       - name: Create test files
@@ -126,8 +110,8 @@ jobs:
           s3-bucket: test-artifacts
           s3-endpoint: http://localhost:3900
           s3-region: garage
-          s3-force-path-style: 'true'
-          compression-level: '6'
+          s3-force-path-style: "true"
+          compression-level: "6"
         env:
           AWS_ACCESS_KEY_ID: ${{ env.ACCESS_KEY }}
           AWS_SECRET_ACCESS_KEY: ${{ env.SECRET_KEY }}
@@ -144,8 +128,8 @@ jobs:
           s3-bucket: test-artifacts
           s3-endpoint: http://localhost:3900
           s3-region: garage
-          s3-force-path-style: 'true'
-          overwrite: 'true'
+          s3-force-path-style: "true"
+          overwrite: "true"
         env:
           AWS_ACCESS_KEY_ID: ${{ env.ACCESS_KEY }}
           AWS_SECRET_ACCESS_KEY: ${{ env.SECRET_KEY }}
@@ -163,8 +147,8 @@ jobs:
           s3-bucket: test-artifacts
           s3-endpoint: http://localhost:3900
           s3-region: garage
-          s3-force-path-style: 'true'
-          compression-level: '0'
+          s3-force-path-style: "true"
+          compression-level: "0"
         env:
           AWS_ACCESS_KEY_ID: ${{ env.ACCESS_KEY }}
           AWS_SECRET_ACCESS_KEY: ${{ env.SECRET_KEY }}
@@ -184,29 +168,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Checkout artifact-s3 library
-        uses: actions/checkout@v4
-        with:
-          repository: ${{ github.repository_owner }}/artifact-s3
-          path: artifact-s3
-
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '24'
-
-      - name: Install library dependencies
-        run: npm ci
-        working-directory: artifact-s3
-
-      - name: Build library
-        run: npm run build
-        working-directory: artifact-s3
+          node-version: "24"
 
       - name: Install action dependencies
-        run: |
-          npm pkg set dependencies.@action-artifact-s3/artifact-s3=file:./artifact-s3
-          npm install
+        run: npm ci
 
       - name: Build action
         run: npm run build
