--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: [main]
 
+permissions:
+  contents: write
+
 jobs:
   build:
     name: Build
@@ -17,7 +20,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "24.11.1"
+          node-version: "24"
 
       - name: Install action dependencies
         run: npm ci
@@ -25,13 +28,23 @@ jobs:
       - name: Build action
         run: npm run build
 
-      - name: Check for uncommitted dist changes
+      - name: Commit dist changes
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: |
           if [[ -n "$(git status --porcelain dist/)" ]]; then
-            echo "::error::Uncommitted changes in dist/. Run 'npm run build' and commit the changes."
+            git config user.name "github-actions[bot]"
+            git config user.email "github-actions[bot]@users.noreply.github.com"
+            git add dist/
+            git commit -m "chore: rebuild dist [skip ci]"
+            git push
+          fi
+
+      - name: Check for uncommitted dist changes (PR only)
+        if: github.event_name == 'pull_request'
+        run: |
+          if [[ -n "$(git status --porcelain dist/)" ]]; then
+            echo "::error::Uncommitted changes in dist/. The dist will be rebuilt when merged to main."
             git status --porcelain dist/
-            echo "Showing diff:"
-            git diff dist/ | head -100
             exit 1
           fi
 
@@ -45,7 +58,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "24.11.1"
+          node-version: "24"
 
       - name: Install action dependencies
         run: npm ci
