Debug: Add validation for SECRET_KEY length

--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -82,6 +82,19 @@ jobs:
           ACCESS_KEY=$(echo "$KEY_INFO" | grep "Key ID:" | awk '{print $3}')
           SECRET_KEY=$(echo "$KEY_INFO" | grep "Secret key:" | awk '{print $3}')
 
+          echo "Parsed ACCESS_KEY length: ${#ACCESS_KEY}"
+          echo "Parsed SECRET_KEY length: ${#SECRET_KEY}"
+          
+          # Verify the values are correct
+          if [ ${#SECRET_KEY} -ne 64 ]; then
+            echo "ERROR: SECRET_KEY is not 64 characters! Got ${#SECRET_KEY} chars"
+            echo "KEY_INFO was:"
+            echo "$KEY_INFO"
+            echo "Grep result:"
+            echo "$KEY_INFO" | grep "Secret key:"
+            exit 1
+          fi
+
           echo "ACCESS_KEY=$ACCESS_KEY" >> $GITHUB_ENV
           echo "SECRET_KEY=$SECRET_KEY" >> $GITHUB_ENV
 
