Update artifact-s3 to latest with metadata fix

--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@kusold/artifact-s3": "github:kusold/artifact-s3#8bbe0a4336c289b76d0427d70d803d43bed27d04",
     "@actions/core": "^1.11.1",
-    "@actions/glob": "^0.5.0"
+    "@actions/glob": "^0.5.0",
+    "@kusold/artifact-s3": "github:kusold/artifact-s3#e5885184399d71982212aeddf874d224fd185ac4"
   },
   "devDependencies": {
     "@types/node": "^22.10.2",
